--- a/src/style/core/variable/_color.scss
+++ b/src/style/core/variable/_color.scss
@@ -1,10 +1,12 @@
 // main color
 $main_color1: #000054;
 $main_color2: #0031de;
-$main_color3: #ffe200;
+$main_color3: rgb(0, 163, 172);
 $main_color4: #131371;
-$main_color5: #002ABD;
-$main_color6: #E6CC00;
+$main_color5: #002abd;
+$main_color6: #e6cc00;
+
+$main_color: #161c24;
 // text color
 $txt1: #444;
 $txt2: #000;
