--- a/src/views/components/Header/Header.scss
+++ b/src/views/components/Header/Header.scss
@@ -1,8 +1,151 @@
 @import "../../../App.scss";
 
+header {
+ background-color: $main_color;
+}
 .header {
+ position: fixed;
+ top: 0;
+ left: 0;
+ z-index: 99;
+ width: 100%;
+ height: auto;
+ &__wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding: 25px 0;
+  @include mq(lg, max) {
+   padding: 15px 0;
+  }
+ }
+ &__left {
+  display: flex;
+  align-items: center;
+ }
  &__logo {
   width: 75px;
   height: auto;
+ }
+ &__right {
+  li {
+   margin-left: 20px;
+   a {
+    font-size: 32px;
+   }
+  }
+  @include mq(lg, max) {
+   display: none;
+  }
+ }
+ &__burger {
+  width: 40px;
+  @include mq(lg, min) {
+   display: none;
+  }
+ }
+ &__Navsp {
+  position: fixed;
+  top: 58px;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+  transition: ease-in-out 0.5s;
+  &.active {
+   z-index: 98;
+   .header__sp {
+    left: 0;
+   }
+  }
+  @include mq(lg, min) {
+   display: none;
+  }
+ }
+ &__sp {
+  position: absolute;
+  top: 0;
+  left: -100%;
+  z-index: 99;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(33, 43, 54);
+  transition: ease-in-out 0.5s;
+  transition-delay: 0.1s;
+  padding-top: 30px;
+  ul {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   li {
+    margin: 0;
+    padding: 15px 0;
+    width: 100%;
+    text-align: center;
+    &.active {
+     background-color: rgba(0, 163, 172, 0.16);
+     a {
+      color: $main_color3;
+      &::before {
+       display: none;
+      }
+     }
+    }
+   }
+  }
+ }
+ &__bg {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(22, 28, 36, 0.6);
+ }
+}
+
+body {
+ &.active {
+  height: 100%;
+  overflow: hidden;
+ }
+}
+
+.header__burger {
+ position: relative;
+ margin-top: 3px;
+ span {
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  display: inline-block;
+  position: absolute;
+  transition: all ease-in-out 0.3s;
+  &:nth-child(1) {
+   top: 0;
+   left: 0;
+  }
+  &:nth-child(2) {
+   top: 10px;
+   right: 0;
+  }
+  &:nth-child(3) {
+   top: 20px;
+   left: 0;
+  }
+ }
+ &.active {
+  span {
+   &:nth-child(1) {
+    transform: rotate(45deg);
+    top: 10px;
+   }
+   &:nth-child(2) {
+    opacity: 0;
+   }
+   &:nth-child(3) {
+    transform: rotate(-45deg);
+    top: 10px;
+   }
+  }
  }
 }
