--- a/src/views/components/Header/Header.scss
+++ b/src/views/components/Header/Header.scss
@@ -2,6 +2,12 @@
 
 header {
  background-color: $main_color;
+ position: fixed;
+ top: 0;
+ left: 0;
+ width: 100%;
+ height: auto;
+ z-index: 999;
 }
 .header {
  position: fixed;
@@ -50,9 +56,11 @@ header {
   width: 100%;
   height: 100vh;
   z-index: -1;
+  opacity: 0;
   transition: ease-in-out 0.5s;
   &.active {
    z-index: 98;
+   opacity: 1;
    .header__sp {
     left: 0;
    }
