--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,10 @@
 @import "./style/style.scss";
 #wrapper {
- min-width: 1200px;
+ min-width: 100%;
  margin: 0 auto;
  overflow: hidden;
- @include mq(lg, max) {
-  min-width: 100%;
+ @include mq(xl, min) {
+  min-width: 1200px;
  }
 }
 
