--- a/src/style/core/mixin/_utils.scss
+++ b/src/style/core/mixin/_utils.scss
@@ -37,3 +37,10 @@
  width: 100%;
  height: 100%;
 }
+
+@mixin lc($value: 3) {
+ display: -webkit-box;
+ -webkit-line-clamp: $value;
+ -webkit-box-orient: vertical;
+ overflow: hidden;
+}
