--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -97,7 +97,7 @@
     transition: all ease-in-out 0.3s;
     @include mq(xl, min) {
      &:hover {
-      transform: translateY(-5px);
+      background-color: rgb(0, 163, 172);
      }
     }
    }
@@ -116,7 +116,7 @@
    .css-t3ipsp-control {
     border: none;
     box-shadow: none;
-    background-color: rgba(145, 158, 171, 0.08);
+    background-color: rgba(145, 158, 171, 1);
     color: #fff;
     padding: 0;
    }
@@ -150,4 +150,11 @@
    }
   }
  }
+}
+.list-none {
+ width: 100%;
+ text-align: center;
+ font-size: 16px;
+ color: #fff;
+ padding: 60px 0;
 }
